# deep-fake

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: main.yml
assets/: toto.webm
cmake/tools/: guards.cmake
include/: DeepFake.hpp  Delaunay.hpp  FaceDetector.hpp  FaceLandMark.hpp  Image.hpp  Timer.hpp
src/: DeepFake.cpp  FaceDetector.cpp  Image.cpp  main.cpp
